--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Coming Soon</a>
               </li>
+                 <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portafolio
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="https://zs22010307.github.io/Portafolio/">Home</a></li>
+                  <li><a class="dropdown-item" href="https://www.canva.com/design/DAGbiMYPW_k/Yr0K5pNkmMmfQWtQoj-Qcw/edit?utm_content=DAGbiMYPW_k&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Actividad 1</a></li>
+                  <li><a class="dropdown-item" href="https://zs22010307.github.io/Actividad2A/">Actividad 2A</a></li>
+                  <li><a class="dropdown-item" href="https://zs22010307.github.io/Actividad2B/">Actividad 2B</a></li>
+                  <li><a class="dropdown-item" href="https://zs22010307.github.io/Actividad3/">Actividad 3</a></li>
+                  <li><a class="dropdown-item" href="https://zs22010307.github.io/Actividad5/">Actividad 5</a></li>
+                  <li><a class="dropdown-item" href="#">Actividad 6</a></li>
+                  <li><a class="dropdown-item" href="#">Proyecto Final</a></li>
+                </ul>
             </ul>
           </div>
         </div>
