--- a/index.html
+++ b/index.html
@@ -44,84 +44,78 @@
     <h1 style="text-align: center"><img src="img/logo.webp" width="7%" height="7%" class="rounded-circle" alt="Logo Nido del Craving">  Bienvenidos al Nido del Craving</h1>
 </div>
 
-<div class="row">
-    <div class="col-2"></div>
-    <div class="col-8" style="text-align: justify; padding: 15px; background-color: rgb(255, 164, 164);">
-        <h4 style="text-align: center;">¡El lugar perfecto para disfrutar de hamburguesas, pizzas y yogurt en Xalapa!</h4>
-        <p style="padding: 4px;">En el nido del Craving sabemos lo que los estudiantes necesitan: <mark style="background-color: rgb(255, 137, 91); border-radius: 25px;">comida deliciosa, rápida y accesible.</mark> Ya sea que estés buscando un almuerzo rápido entre clases o un lugar cómodo para relajarte con amigos...</p>
-        <h3 style="text-align: center; padding: 20px;">¡Tenemos lo que necesitas!</h3>
-       
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/burger.webp" class="d-block w-100" alt="Hamburguesas">
-              </div>
-              <div class="carousel-item">
-                <img src="img/pizza.webp" class="d-block w-100" alt="Pizzas">
-              </div>
-              <div class="carousel-item">
-                <img src="img/yogurt.webp" class="d-block w-100" alt="Yogurt">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-        <h3 style="text-align: center; padding: 10px;">Nuestras Promociones</h3>
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  Combo Estudiantes
-                </button>
-              </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Hamburguesa + Papas + Refresco por solo $79 MXN</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  Pizzas 2x1
-                </button>
-              </h2>
-              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Pizza 2x1: Todos los martes y jueves disfruta de nuestras pizzas al 2x1.</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                  Yogurt Especial
-                </button>
-              </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Lleva un yogurt con toppings gratis al comprar cualquier combo.</div>
-              </div>
-            </div>
-          </div>
-
-    <h3 style="text-align: center; padding: 10px;">Conoce Nuestras Instalaciones</h3>
-    <p>Disfruta de un espacio diseñado pensando en ti. Nuestro restaurante cuenta con áreas de:</p>
-    <ul>
-        <li>Comedor acogedor para relajarte y disfrutar de tus comidas.</li>
-        <li>Zona de pedidos rápida para llevar tus alimentos sin esperar demasiado.</li>
-        <li>Área de estudio con Wi-Fi gratuito, ideal para hacer tareas mientras comes algo delicioso.</li>
-    </ul>
-
-    <h3 style="text-align: center; padding: 10px;">Ubicación</h3>
-    <p>Nos encontramos en: Arco Sur Paseo 112 lote 2, Campo Nuevo, 91097 Xalapa-Enríquez, Ver., México.</p>
-    <h5 style="text-align: center; padding: 5px">¡Ven a conocernos, estamos ubicados a solo unos minutos de la universidad!</h5>
+<div class="container" style="background-color: rgb(255, 164, 164)">
+  <h4 style="text-align: center; padding: 20px">¡El lugar perfecto para disfrutar de hamburguesas, pizzas y yogurt en Xalapa!</h4>
+  <p style="padding: 4px;">En el nido del Craving sabemos lo que los estudiantes necesitan: <mark style="background-color: rgb(255, 137, 91); border-radius: 25px;">comida deliciosa, rápida y accesible.</mark> Ya sea que estés buscando un almuerzo rápido entre clases o un lugar cómodo para relajarte con amigos...</p>
+  <h3 style="text-align: center; padding: 20px;">¡Tenemos lo que necesitas!</h3>
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/burger.webp" class="d-block w-100" alt="Hamburguesas">
+      </div>
+      <div class="carousel-item">
+        <img src="img/pizza.webp" class="d-block w-100" alt="Pizzas">
+      </div>
+      <div class="carousel-item">
+        <img src="img/yogurt.webp" class="d-block w-100" alt="Yogurt">
+      </div>
     </div>
-    <div class="col-2"></div>
-</div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <h3 style="text-align: center; padding: 10px;">Nuestras Promociones</h3>
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            Combo Estudiantes
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Hamburguesa + Papas + Refresco por solo $79 MXN</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Pizzas 2x1
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Pizza 2x1: Todos los martes y jueves disfruta de nuestras pizzas al 2x1.</div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Yogurt Especial
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Lleva un yogurt con toppings gratis al comprar cualquier combo.</div>
+        </div>
+      </div>
+    </div>
 
+<h3 style="text-align: center; padding: 10px;">Conoce Nuestras Instalaciones</h3>
+<p>Disfruta de un espacio diseñado pensando en ti. Nuestro restaurante cuenta con áreas de:</p>
+<ul>
+  <li>Comedor acogedor para relajarte y disfrutar de tus comidas.</li>
+  <li>Zona de pedidos rápida para llevar tus alimentos sin esperar demasiado.</li>
+  <li>Área de estudio con Wi-Fi gratuito, ideal para hacer tareas mientras comes algo delicioso.</li>
+</ul>
+
+<h3 style="text-align: center; padding: 10px;">Ubicación</h3>
+<p>Nos encontramos en: Arco Sur Paseo 112 lote 2, Campo Nuevo, 91097 Xalapa-Enríquez, Ver., México.</p>
+<h5 style="text-align: center; padding: 10px;">¡Ven a conocernos, estamos ubicados a solo unos minutos de la universidad!</h5>
+</div>
+    
 <div class="footer" style="text-align: center; background-color: rgb(0, 0, 0); color: white; padding: 5px;">
     <p>El Nido Del Craving®. Realizado por: Palacios Ruiz Carlos. Última Edición: 20 de enero de 2025.</p>
 </div>
